# zoitechat-appimage

./: .gitignore  .mailmap  Doxyfile  README.md  meson.build  readme.md
.github/workflows/: appimage-build.yml  debian-build.yml  flatpak-build.yml  msys-build.yml  windows-arm64-msys2.yml  windows-build.yml
.tx/: config  howto.md
data/: zoitechat.gresource.xml
data/icons/: meson.build
data/man/: meson.build  zoitechat.1.in
data/misc/: io.github.Hexchat.Plugin.metainfo.xml.in  io.github.Hexchat.ThemeManager.desktop.in  io.github.Hexchat.ThemeManager.xml  io.github.Hexchat.appdata.xml.in  io.github.Hexchat.desktop.in.in  meson.build
data/pkgconfig/: meson.build  zoitechat-plugin.pc.in
debian/: rules
flatpak/: Load-plugins-from-Flatpak-extensions.patch  io.github.Hexchat.json
osx/: Info.plist.in  gtkrc  launcher.sh  makebundle.sh  zoitechat.bundle
plugins/: meson.build
plugins/checksum/: checksum.c  checksum.def  checksum.vcxproj  meson.build
plugins/exec/: exec.c  exec.vcxproj  meson.build
plugins/fishlim/: dh1080.c  dh1080.h  fishlim.def  fishlim.vcxproj  fishlim.vcxproj.filters  keystore.c  meson.build  plugin_zoitechat.c
plugins/lua/: lua.c  lua.vcxproj  meson.build
po/: POTFILES  af.po  am.po  ast.po  az.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  gu.po  hi.po  hu.po  id.po  it.po  ja_JP.po  kn.po  ko.po  lt.po  lv.po  meson.build  mk.po  ml.po  ms.po  nb.po  nl.po  no.po  pa.po  pl.po  pt.po  pt_BR.po  (+15 more)
win32/: config.h.tt  zoitechat.exe.manifest  zoitechat.props  zoitechat.sln
(+188 files in other folders)
